Incorrect G1StringDedupEntry type used in StringDedupTable destructor

XMLWordPrintable

    • gc
    • b06

        See:

        StringDedupTable::StringDedupTable(size_t size, jint hash_seed) :
        ...
          _buckets = NEW_C_HEAP_ARRAY(StringDedupEntry*, _size, mtGC);
        ...
        }

        StringDedupTable::~StringDedupTable() {
          FREE_C_HEAP_ARRAY(G1StringDedupEntry*, _buckets);
        }

        This is a trivial leftover from JDK-8203641. G1StringDedupEntry symbol does not even exist, and the whole thing works because FREE_C_HEAP_ARRAY ignores that parameter. But it should be consistent anyway.

              Assignee:
              Aleksey Shipilev
              Reporter:
              Aleksey Shipilev
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: