8237217: Incorrect G1StringDedupEntry type used in StringDedupTable destructor

Reviewed-by: kbarrett, zgu